<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Febeca C.A.</string>
    <string name="ids_user_group_name">catalogo-febeca</string>
    <string name="navigation_drawer_open">Abrir panel de navegación</string>
    <string name="navigation_drawer_close">Cerrar panel de navegación</string>
    <string name="action_setting">Configuración</string>
    <string name="search">Buscar</string>
    <string name="category">Categoría</string>
    <string name="categories">Categorías</string>
    <string name="share">Compartir</string>
    <string name="download">Descargar</string>
    <string name="title_activity_product_detail">Detalle del Producto</string>
    <string name="related_shopping_products">Productos relacionados según pedidos</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="product_details_label">Detalles del Producto</string>
    <string name="product_description_detail_html">&lt;b&gt;Descripción:&lt;/b&gt; %1$s</string>
    <string name="product_purpose_detail_html">&lt;b&gt;Uso:&lt;/b&gt; %1$s</string>
    <string name="product_category_detail_html_link">&lt;b&gt;Categoría:&lt;/b&gt; &lt;font color="#07C"&gt;&lt;u&gt;%1$s&lt;/u&gt;&lt;/font&gt;</string>
    <string name="product_subcategory_detail_html_link">&lt;b&gt;SubCategoría:&lt;/b&gt; &lt;font color="#07C"&gt;&lt;u&gt;%1$s&lt;/u&gt;&lt;/font&gt;</string>
    <string name="search_label">Buscar</string>
    <string name="search_hint">Buscar Producto</string>
    <string name="shopping_cart">Pedido Abierto</string>
    <string name="finalize_open_order">Finalizar Pedido Abierto</string>
    <string name="open_shopping_sales">Cotizaciones Abiertas</string>
    <string name="open_shopping_sale">Cotización Abierta</string>
    <string name="home">Páginal Principal</string>
    <string name="wish_list">Favoritos</string>
    <string name="recommended_products">Recomendados</string>
    <string name="my_company">Mi Compañía</string>
    <string name="orders_list">Pedidos Cerrados</string>
    <string name="order_tracking">Rastreo del pedido</string>
    <string name="business_partners">Clientes</string>
    <string name="closed_sales_orders">Cotizaciones Cerradas</string>
    <string name="invoces_list">Facturas</string>
    <string name="invite">Invitar amigos</string>
    <string name="contact_us">Contáctanos</string>
    <string name="manage">Administrar</string>
    <string name="report_error">Reportar Error</string>
    <string name="communicate">Comunicación</string>
    <string name="value_us">Valoranos</string>
    <string name="google_play">Google Play</string>
    <string name="tools">Herramientas</string>
    <string name="add_to_wishlist">Enviar a Favoritos</string>
    <string name="move_to_shopping_cart">Mover al pedido</string>
    <string name="qty_ordered_label">Cant. pedida:</string>
    <string name="proceed_to_checkout">Finalizar</string>
    <string name="no_app_installed_to_share">No se encuentra una aplicación desde donde se pueda compartir</string>
    <string name="checkout_my_app">Hey, descarga la aplicación para comprar a %1$s desde: https://play.google.com/store/apps/details?id=%2$s y mantente al día con todas sus ofertas y promociones. Te sorprenderá!</string>
    <string name="search_title">Buscar</string>
    <string name="filter_title">Filtrar</string>
    <string name="filter">Filtrar</string>
    <string name="filter_by">Filtrar Por</string>
    <string name="external_storage_unavailable">El almacenamiento externo no se encuentra disponible o no se tiene permiso para escribir.</string>
    <string name="company_name">Febeca C.A.</string>
    <string name="brands">Marcas</string>
    <string name="new_user_authorized">Nuevo usuario autorizado</string>
    <string name="error_validating_user_return_null">Error validando usuario, consulta devolvió null.</string>
    <string name="error_validating_user_response_move_to_next_false">Error validating user, response.moveToNext() is false in userSignIn.</string>
    <string name="user_authorized">Usuario Autorizado</string>
    <string name="user_not_authorized">Usuario NO Autorizado</string>
    <string name="user_wrong_password">Contraseña incorrecta</string>
    <string name="user_not_exist_in_server">Usuario no existe en el servidor</string>
    <string name="user_response_move_to_next_false">response.moveToNext() is false in userSignIn</string>
    <string name="user_session_token_null">Session token is null or 0-length</string>
    <string name="general_authorization_error">General Authorization Error</string>
    <string name="sync_started">Synchronization started</string>
    <string name="sync_finished">Synchronization finished.</string>
    <string name="sync_finished_duration">Synchronization finished, duration: %s.</string>
    <string name="sync_cancelled">Synchronization cancelled</string>
    <string name="general_exception">GENERAL_EXCEPTION</string>
    <string name="io_exception">IO_EXCEPTION</string>
    <string name="operation_cancelled_exception">OPERATION_CANCELLED_EXCEPTION</string>
    <string name="xml_pull_parse_exception">XML_PULL_PARSE_EXCEPTION</string>
    <string name="no_log_message_registered">No log message registered.</string>
    <string name="authenticator_exception">AUTHENTICATOR_EXCEPTION</string>
    <string name="network_connection_unavailable">Conexión de red no disponible.</string>
    <string name="sync_complete">Synchronization complete</string>
    <string name="authentication_failed">Error de autenticación.</string>
    <string name="sync_cancelled_by_user">Synchronization cancelled by user.</string>
    <string name="sync_duration">Synchronization Duration</string>
    <string name="log_clean_succesfully">The Log was clean successfully.</string>
    <string name="sync_in_progress">Synchronization in progress</string>
    <string name="alarm_already_set">Error creating Alarm, Alarm already set.</string>
    <string name="wait_please">Espere por favor</string>
    <string name="authenticating_user">Autenticando al usuario</string>
    <string name="mandatory_fields_empty">Se necesita cargar todos los campos obligatorios.</string>
    <string name="user_already_registered">El usuario ya se encuentra registrado en la aplicación.</string>
    <string name="error_server_address_ioexception">La conexión no puede ser establecida.</string>
    <string name="error_server_address_malformedurlexception">El URL no se encuentra escrito correctamente</string>
    <string name="server_address">Dirección del servidor</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="user_name_tax_id">Nombre de usuario</string>
    <string name="sync_user_group">Grupo de sincronización</string>
    <string name="password">Contraseña</string>
    <string name="company_host_name">www.febeca.com</string>
    <string name="prompt_rif">R.I.F.</string>
    <string name="prompt_client_code">Código del Cliente</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="error_invalid_rif">Este R.I.F. es inválido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_client_code">El código de cliente es incorrecto</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="title_activity_product_list">Productos</string>
    <string name="title_activity_shopping_cart">Pedido</string>
    <string name="title_activity_categories">Categorías</string>
    <string name="title_activity_sub_categories">Sub Categorías</string>
    <string name="title_activity_checkout">Finalizar Pedido</string>
    <string name="title_activity_order_list">Pedidos</string>
    <string name="title_activity_order_detail">Detalle del Pedido</string>
    <string name="title_activity_wish_list">Favoritos</string>
    <string name="title_activity_filter_options">Busqueda Por</string>
    <string name="title_activity_brands_list">Marcas</string>
    <string name="commercial_package">%1$s %2$d</string>
    <string name="commercial_package_label_detail_html">&lt;b&gt;Empaque:&lt;/b&gt; %1$s %2$d</string>
    <string name="availability">Disponibles: %1$d</string>
    <string name="availability_variation">Variación Disp.: %1$s</string>
    <string name="availability_positive_variation">Variación Disp.: +%1$s</string>
    <string name="quantity_label">Cantidad:</string>
    <string name="proceed_to_checkout_question">¿Desea finalizar el pedido?</string>
    <string name="proceed_to_checkout_quotation_question">¿Desea finalizar la cotización?</string>
    <string name="order_number">Pedido No.: %1$s</string>
    <string name="sales_order_doc_name">COTIZACIÓN</string>
    <string name="order_doc_name">PEDIDO</string>
    <string name="sales_order_number">Cotización No.: %1$s</string>
    <string name="sales_order_date">Fecha de Cotización: %1$s</string>
    <string name="order_date">Fecha del Pedido: %1$s</string>
    <string name="tax_id">RIF: %1$s</string>
    <string name="order_lines_number">Cantidad de líneas: %1$s</string>
    <string name="products_availables">Artículos disponibles: %1$s</string>
    <string name="my_purchases">Mis Compras</string>
    <string name="my_orders">Mis Pedidos</string>
    <string name="my_sales_orders">Mis Cotizaciones</string>
    <string name="data_sync">Datos &amp; Sincronización</string>
    <string name="pref_title_sync_frequency">Frecuencia de sincronización</string>
    <string name="sync_periodicity_default_value">3600</string>
    <string name="settings">Configuraciones</string>
    <string name="search_by">Buscar por...</string>
    <string name="save_images_in_device">Guardar en el dispositivo</string>
    <string name="load_thumb_images">Imágenes siempre disponibles</string>
    <string name="load_original_images">Imágenes siempre disponibles</string>
    <string name="load_thumb_images_summaryOff">Las imágenes en miniatura de los productos se cargan cada vez que se requiere. Se necesita acceso a internet para ser mostradas.</string>
    <string name="load_thumb_images_summaryOn">Se descargan las imágenes miniaturas de los productos en el dispositivo para que se puedan mostrar aún sin tener acceso a intenet.</string>
    <string name="load_original_images_summaryOff">Las imágenes de alta resolución de los productos se cargan cada vez que se requiere. Se necesita acceso a internet para ser mostradas.</string>
    <string name="load_original_images_summaryOn">Se descargan las imágenes de alta resolución de los productos en el dispositivo para que se puedan mostrar aún sin tener acceso a intenet.</string>
    <string name="save_images_in_device_summaryOff">Las imágenes no se almacenan en el dispositivo. Ahorro de espacio en disco. Se necesita acceso a internet para mostrar las imágenes.</string>
    <string name="save_images_in_device_summaryOn">las imágenes mostradas se almacenan en el dispositivo. Se requiere espacio en disco. Se ahorran los megas del plan de datos.</string>
    <string name="orders_tracking_list">Rastreo de Pedidos</string>
    <string name="help">Ayuda</string>
    <string name="welcome_message">Mensaje Bienvenida</string>
    <string name="synchronization">Sincronización</string>
    <string name="products_thumb_image">Imágenes miniatura de los productos</string>
    <string name="products_original_image">Imágenes de alta resolución de los productos</string>
    <string name="notificationHistories">Notificaciones</string>
    <string name="settings_images_management">Manejo de Imágenes</string>
    <string name="images_folder_info">Información del fichero de imágenes</string>
    <string name="delete_images_folder">Eliminar fichero de imágenes</string>
    <string name="recovery_disk_space_explanation">Se puede recuperar espacio en disco eliminando el fichero de las imágenes almácenadas</string>
</resources>