<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_home">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_my_company"
            android:icon="@drawable/ic_business_black_24dp"
            android:title="@string/my_company" />
    </group>
    <group
        android:id="@+id/menu_1">
        <item
            android:id="@+id/nav_notifications_history_list"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notificationHistories"
            app:actionLayout="@layout/unread_items"/>
        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/wish_list"
            app:actionLayout="@layout/unread_items"/>

        <item
            android:id="@+id/nav_recommended_products_list"
            android:icon="@drawable/ic_thumb_up_black_24dp"
            android:title="@string/recommended_products"
            app:actionLayout="@layout/unread_items"/>
    </group>
    <group
        android:id="@+id/menu_business_partners">
        <item
            android:id="@+id/nav_business_partners"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/business_partners"
            app:actionLayout="@layout/unread_items"/>
    </group>
    <item android:title="@string/my_orders">
        <menu>
            <item
                android:id="@+id/nav_shopping_cart"
                android:icon="@drawable/ic_shopping_cart_black_24dp"
                android:title="@string/shopping_cart" />
            <item
                android:id="@+id/nav_orders"
                android:icon="@drawable/ic_view_list_black_24dp"
                android:title="@string/orders_list" />
            <item
                android:id="@+id/nav_orders_tracking"
                android:icon="@drawable/ic_track_changes_black_24dp"
                android:title="@string/orders_tracking_list" />
        </menu>
    </item>
    <item android:title="@string/my_sales_orders">
        <menu>
            <item
                android:id="@+id/nav_shopping_sale"
                android:icon="@drawable/ic_shopping_cart_black_24dp"
                android:title="@string/open_shopping_sale" />
            <item
                android:id="@+id/nav_sales_orders"
                android:icon="@drawable/ic_view_list_black_24dp"
                android:title="@string/closed_sales_orders" />
        </menu>
    </item>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_conctac_us"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/invite" />
        </menu>
    </item>
    <item android:title="@string/action_setting">
        <menu>
            <item
                android:id="@+id/nav_data_sync_settings"
                android:icon="@drawable/ic_sync_black_24dp"
                android:title="@string/data_sync" />
            <item
                android:id="@+id/nav_images_settings"
                android:icon="@drawable/ic_photo_library_black_24dp"
                android:title="@string/settings_images_management" />
        </menu>
    </item>
    <item android:title="@string/help">
        <menu>
            <item
                android:id="@+id/nav_welcome_message"
                android:icon="@drawable/ic_burst_mode_black_24dp"
                android:title="@string/welcome_message" />
            <item
                android:id="@+id/nav_report_error"
                android:icon="@drawable/ic_report_problem_black_24dp"
                android:title="@string/report_error" />
        </menu>
    </item>
</menu>
