<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="category_sync"
        android:title="@string/synchronization">

        <EditTextPreference
            android:key="server_address"
            android:title="@string/server_address">

        </EditTextPreference>

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="@string/sync_periodicity_default_value"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:key="sync_periodicity"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sync_frequency" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_thumb_images"
        android:title="@string/products_thumb_image">

        <SwitchPreference
            android:key="save_images_in_device"
            android:defaultValue="true"
            android:title="@string/save_images_in_device"
            android:summaryOff="@string/save_images_in_device_summaryOff"
            android:summaryOn="@string/save_images_in_device_summaryOn" />

        <SwitchPreference
            android:dependency="save_images_in_device"
            android:key="sync_thumb_images"
            android:defaultValue="false"
            android:title="@string/load_thumb_images"
            android:summaryOff="@string/load_thumb_images_summaryOff"
            android:summaryOn="@string/load_thumb_images_summaryOn" />

        <Preference
            android:title="@string/images_folder_info"
            android:key="thumb_images_folder_info" />

        <Preference
            android:title="@string/delete_images_folder"
            android:key="delete_thumb_images_folder"
            android:summary="@string/recovery_disk_space_explanation"
            android:icon="@drawable/ic_delete_forever_black_24dp"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_original_images"
        android:title="@string/products_original_image">

        <SwitchPreference
            android:key="save_original_images_in_device"
            android:defaultValue="false"
            android:title="@string/save_images_in_device"
            android:summaryOff="@string/save_images_in_device_summaryOff"
            android:summaryOn="@string/save_images_in_device_summaryOn" />

        <SwitchPreference
            android:dependency="save_original_images_in_device"
            android:key="sync_original_images"
            android:defaultValue="false"
            android:title="@string/load_original_images"
            android:summaryOff="@string/load_original_images_summaryOff"
            android:summaryOn="@string/load_original_images_summaryOn" />

        <Preference
            android:title="@string/images_folder_info"
            android:key="original_images_folder_info" />

        <Preference
            android:title="@string/delete_images_folder"
            android:key="delete_original_images_folder"
            android:summary="@string/recovery_disk_space_explanation"
            android:icon="@drawable/ic_delete_forever_black_24dp"/>
    </PreferenceCategory>

</PreferenceScreen>
