<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.smartbuilders.smartsales.ecommerceandroidapp.WishListActivity">

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item android:id="@+id/search_by"
        android:title="@string/search_by"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        app:showAsAction="never"
        android:title="@string/share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
</menu>